<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_1"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_1"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_2"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_2"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_3"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_3"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_4"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_4"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_5"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_5"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_6"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_6"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_7"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_7"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_8"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_8"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_9"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_9"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_10"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_10"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address_11"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ip_address_11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890."
                        android:inputType="number"
                        android:labelFor="@+id/ip_address_11"
                        android:maxLines="1" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_1"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_1"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_2"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_2"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_3"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_3"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_4"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_4"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_5"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_5"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_6"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_6"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_7"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_7"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_8"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_8"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_9"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_9"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_10"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_10"
                        android:maxLines="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_11"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/port_11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:labelFor="@+id/port_11"
                        android:maxLines="1" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>