<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xinhe002614.modbustest.MainActivity">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/power_describ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:text="@string/if_start"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/power_switch"
            style="@style/PowerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout3"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="5dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/main_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <Button
            android:id="@+id/forward_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/stop_btn"
            android:layout_alignEnd="@+id/stop_btn"
            android:layout_alignRight="@+id/stop_btn"
            android:layout_marginBottom="5dp"
            android:text="@string/forward" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/stop" />

        <Button
            android:id="@+id/backward_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/stop_btn"
            android:layout_alignRight="@+id/stop_btn"
            android:layout_below="@+id/stop_btn"
            android:layout_marginTop="5dp"
            android:text="@string/backward" />

        <Button
            android:id="@+id/coil_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cruise_control"
            android:layout_alignEnd="@+id/cruise_control"
            android:layout_alignRight="@+id/cruise_control"
            android:layout_marginBottom="5dp"
            android:text="@string/coil_up" />

        <Button
            android:id="@+id/cruise_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/stop_btn"
            android:layout_toStartOf="@+id/stop_btn"
            android:text="@string/cruise_control" />

        <Button
            android:id="@+id/coil_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/cruise_control"
            android:layout_alignRight="@+id/cruise_control"
            android:layout_below="@+id/cruise_control"
            android:layout_marginTop="5dp"
            android:text="@string/coil_down" />

        <com.wx.wheelview.widget.WheelView
            android:id="@+id/speed_select"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/speed_select"
            android:layout_toRightOf="@id/speed_select"
            android:text="@string/km_h" />

    </RelativeLayout>

</LinearLayout>
